--- a/docs/设计模式/创建型/简单工厂、工厂方法、抽象工厂.md
+++ b/docs/设计模式/创建型/简单工厂、工厂方法、抽象工厂.md
@@ -1,10 +1,8 @@
-﻿# 简单工厂、工厂方法、抽象工厂
+# 简单工厂、工厂方法、抽象工厂
 
-标签（空格分隔）： 设计模式 Swift
+<span style="color: blue; background: yellow; border-radius: 5px; padding: 2px 4px;">Swift</span>
 
 ---
-
-[TOC]
 
 **简单工厂**不是一个设计模式，而是一直编码习惯
 
