--- a/docs/设计模式/设计模式总览.md
+++ b/docs/设计模式/设计模式总览.md
@@ -1,6 +1,6 @@
 # 设计模式总览
 
-> "每一个模式描述来了一个在我们周围不断重复发生的问题，"
+> "每一个模式描述来了一个在我们周围不断重复发生的问题，以及该问题的解决方案的核心。这样，你就能一次又一次地使用该方案而不必做重复劳动"
 
 
 ## 从面向对象谈起
@@ -39,6 +39,69 @@
 ### 软件设计的目标
 
 软件设计的金科玉律：**复用**
+
+## 重新认识面向对象
+
+### 理解隔离变化
+
++ 从宏观层面来看，面向对象的构建方式更能适应软件的变化，能将变化带来的影响减为最最小
+
+### 各司其职
+
++ 从微观层面来看，面向对象的方式更强调各个类的”责任“
++ 由于需求变化导致的新增类型不应该影响原来类型的视线---是所谓各负其责
+
+### 对象是什么？ 
+
++ 从语言实现层面来看，对象封装了代码和数据
++ 从规格层面讲，对象是一系列可被使用的公共接口
++ 从概念层面讲, 对象是某种拥有责任的抽象
+
+
+## 面向对象设计原则
+
+### 1. 依赖倒置原则（DIP）
+
++ 高层模块（稳定）不应该依赖于低层模块（变化）， 二者都应该依赖于抽象（稳定）
+    + MainFrame 依赖于 Shape， Line 和 Rectangle 依赖于 Shape
++ 抽象（稳定）不应该依赖于实现细节（变化），实现细节应该依赖于抽象（稳定）
+    + Shape 不应该含有Line 和 Shape 的实现细节
+
+### 2. 开放封闭原则（OCP）
+
++ 对扩展开发，对更改封闭
++ 类模块应该是可扩展的，但是不可修改
+
+### 3. 单一职责原则（SRP）
+
++ 一个类应该仅有一个引起它变化的原因
++ 变化的方向隐含着类的责任
+
+### 4. 里氏替换原则（LSP）
+
++ 子类必须能够替换它们的基类（IS-A）
++ 继承表达类型的抽象
+
+### 5. 接口隔离原则（ISP）
+
++ 不应该强迫客户程序依赖它们不用的方法；
++ 接口应该小而完备
+
+### 6. 优先使用对象组合，而不是类继承
+
++ 类继承通常为”白箱复用“，对象组合通常为”黑箱复用“；
++ 继承在某种程度上破坏了封装性，子类父类耦合度高；
++ 而对象组合只要求被组合的对象具有良好定义的接口，耦合度低；
+
+### 7. 封装变化点
+
++ 使用封装来创建对象之间的分界层，让设计者可以在分界层一侧进行修改，而不会对另一侧产生不良的影响，从而实现层次间的松耦合
+
+### 8.针对接口编程，而不是针对实现编程
+
++ 不将变量类型声明为某个特定的具体类，而是声明为某个具体类
++ 客户程序无需获知对象的具体类型，只需要知道对象所具有的接口；
++ 减少系统中各部分的依赖关系，从而实现 ”高内聚、松耦合“的类型设计方法；
 
 
 ## 推荐书籍
