--- a/docs/设计模式/设计模式总览.md
+++ b/docs/设计模式/设计模式总览.md
@@ -107,7 +107,8 @@
 ## 推荐书籍
 
 + 《设计模式 可复用面向对象软件的基础》
-
++ 《重构-改善既有代码的设计》
++ 《重构与模式》
 
 ## 个人思考
 
@@ -174,4 +175,4 @@
     }
 
     ```
- 3. Map 映射方法
+3. Map 映射方法
