重命名和增加工厂方法

--- a/docs/设计模式/设计模式的分类.md
+++ b/docs/设计模式/设计模式的分类.md
@@ -15,10 +15,13 @@
 
 ### 对象创建
 
-+ Factory Method
-+ Abstract Factory
-+ Prototype
-+ Builder
++ 通过“对象创建”模式绕开 New，来避免对象创建（new）过程中所导致的紧耦合（依赖具体类），从而支持对象创建的稳定。它是接口抽象之后的第一步工作。
+
++ 典型模式
+    + Factory Method
+    + Abstract Factory
+    + Prototype
+    + Builder
 
 ### 对象性能
 
